<resources>
    <string name="LOADING">Loading...</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_flip">About</string>
    <string name="about_menu">About</string>
    <string name="about_text" formatted="false">Mx Tunnel PRO %s (build %d)</string>
    <string name="add_proxy">Add Proxy</string>
    <string name="add_routes">Adding routes</string>
    <string name="add_shortcut_app">Add App Shortcut</string>
    <string name="add_shortcut_connect">Add Connect Shortcut</string>
    <string name="add_shortcut_disconnect">Add Disconnect Shortcut</string>
    <string name="add_shortcut_help_text">Create a Connect shortcut for a given profile on your home page. When you touch the shortcut, the profile will automatically connect.</string>
    <string name="add_shortcut_menu">Add Shortcut</string>
    <string name="advanced_menu">Advanced</string>
    <string name="alt_proxy_summary">Enable Private Tunnel proxy (for Private Tunnel profiles only)</string>
    <string name="alt_proxy_title">Private Tunnel Proxy</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app">Mx Tunnel PRO</string>
    <string name="app_mobile_info">Application version: %1$s %2$s</string>
    <string name="app_name">Android In-App Update Library</string>
    <string name="app_shortcut_title">Mx Tunnel PRO</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appdone_msg">Redirecting...</string>
    <string name="appload_msg">App will be loaded in:</string>
    <string name="apprate_dismiss">No thanks</string>
    <string name="apprate_message">If you enjoy using %s, please take a moment to rate it. Thanks for your support!</string>
    <string name="apprate_rate">Rate it!</string>
    <string name="apprate_remind_later">Remind me later</string>
    <string name="apprate_title">Rate %s</string>
    <string name="ar_accept">Accept</string>
    <string name="ar_cancel">Cancel</string>
    <string name="ar_title">Profile available for import</string>
    <string name="ar_warn_replace">Note: existing profile will be replaced</string>
    <string name="assign_ip">Assigning IP address</string>
    <string name="auth">Authenticating</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="auto_keyboard_summary">Automatically raise/dismiss soft keyboard</string>
    <string name="auto_keyboard_title">Auto Keyboard</string>
    <string name="autologin_suffix">/autologin</string>
    <string name="autostart_finish_on_connect_summary">When VPN connection is launched from a shortcut or automatically on reboot, and no user input is required to authenticate connection, minimize the app after VPN connects.</string>
    <string name="autostart_finish_on_connect_title">Shortcut Minimize</string>
    <string name="autostart_summary">If a VPN connection is active on device shutdown, try to reconnect it on reboot</string>
    <string name="autostart_title">Reconnect on reboot</string>
    <string name="beta_expire_warn">Note: This beta expires on %s</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="build_three">Build Version:</string>
    <string name="bytes_in">Bytes in</string>
    <string name="bytes_out">Bytes out</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="cert_error_header_text">Certificate error:</string>
    <string name="cert_profile_insecure_summary">Enable support for MD5 signatures of X509 certificates. Note that MD5 is broken and should not be used</string>
    <string name="cert_profile_insecure_title">Use insecure algorithms</string>
    <string name="cert_verify_fail">Server certificate verification failed</string>
    <string name="cert_warn_accept">Accept</string>
    <string name="cert_warn_reject">Reject</string>
    <string name="cert_warn_title">Accept Invalid Certificate?</string>
    <string name="channel_description">Mx Tunnel PRO notifications</string>
    <string name="channel_description_background">Ongoing statistics of the established UDP connection</string>
    <string name="channel_description_status">Status changes of the UDP Tunnel connection (Connecting, authenticating,…)</string>
    <string name="channel_description_userreq">UDP Tunnel connection requires a user input, e.g. two factor authentication</string>
    <string name="channel_name">@string/app</string>
    <string name="channel_name_background">Connection statistics</string>
    <string name="channel_name_status">Connection status change</string>
    <string name="channel_name_userreq">User interaction required</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choose_button_label">Select</string>
    <string name="clear_flip">Clear Data</string>
    <string name="clear_logs">Logs Cleared</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="client_halt">Mx Tunnel PRO was halted by server</string>
    <string name="client_ip">Client IP</string>
    <string name="client_restart">Mx Tunnel PRO was restarted by server</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">f7ca31d1805a40a7a6a0daa50061e1f5</string>
    <string name="com.google.firebase.crashlytics.version_control_info">generate_error_reason: NO_SUPPORTED_VCS_FOUND\n</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_name">Common name:</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contact_title">Contact Us</string>
    <string name="privacy_msg">This program collects statistics usage and crash reports which is collected by Google Play and Firebase\n\nThis program also collects search history/geographic location and advertisement ID for advertisement purposes</string>
    <string name="privacy_title">Privacy</string>
    <string name="respo_msg">This program is a network tool that ensures you security and anonimity. However this program can also bypass restriction imposed by your network.\n\nWe are not responsible to any damages that you may cause to a network that is vulnerable to our technique. You are solely responsible for that\n\nWe are also not responsible for any damages that caused by a modified version of our app. Always be sure that you only use or install the app that we provided</string>
    <string name="respo_title">Responsibility</string>
    <string name="service_msg">We use OpenVPN with TLS/Websocket to cover the entire connection between the client and server, so our service is prone to the same flaws and vulnerabilities present in this technology\n\nWe cannot guarantee a full connection stability or full server availability but we are doing our best to provide best service for our users</string>
    <string name="service_title">Service Warranty</string>
    <string name="terms_msg">By using our app, you agree to all of our terms below.</string>
    <string name="terms_title">TERMS OF USE</string>
</resources>