<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#ffffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/about_back"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_back"
            android:scaleType="fitXY"
            android:tint="@color/tint"/>
        <TextView
            android:textSize="14dp"
            android:textStyle="normal"
            android:textColor="@color/tint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Back"/>
    </LinearLayout>
    <ScrollView
        android:background="#ffffffff"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/ic_app_icon"
                    android:scaleType="fitXY"/>
                <TextView
                    android:textSize="15dp"
                    android:textStyle="normal"
                    android:textColor="@color/tint"
                    android:id="@+id/name_version"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Build v1.0.0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="20sp"
                    android:typeface="serif"
                    android:textStyle="bold"
                    android:textColor="#fff90e00"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_title"
                    android:shadowColor="#ffffffff"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>
                <TextView
                    android:textSize="10sp"
                    android:typeface="serif"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:text="@string/terms_msg"
                    android:shadowColor="#ffffffff"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>
                <LinearLayout
                    android:gravity="center"
                    android:background="@color/tint"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="7dp">
                    <TextView
                        android:textSize="12dp"
                        android:textStyle="bold"
                        android:textColor="@color/tint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/respo_title"/>
                    <TextView
                        android:textSize="15sp"
                        android:textColor="@color/tint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/respo_msg"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="7dp">
                    <TextView
                        android:textSize="12dp"
                        android:textStyle="bold"
                        android:textColor="@color/tint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/privacy_title"/>
                    <TextView
                        android:textSize="15sp"
                        android:textColor="@color/tint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/privacy_msg"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="7dp">
                    <TextView
                        android:textSize="12dp"
                        android:textStyle="bold"
                        android:textColor="@color/tint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/service_title"/>
                    <TextView
                        android:textSize="15sp"
                        android:textColor="@color/tint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/service_msg"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="7dp">
                    <TextView
                        android:textSize="12dp"
                        android:textStyle="bold"
                        android:textColor="@color/tint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/contact_title"/>
                    <TextView
                        android:textSize="15sp"
                        android:textColor="@color/tint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="20dp"
                        android:text="Email: sulitnetsolutions@gmail.com"
                        android:textIsSelectable="true"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
        <LinearLayout
            android:gravity="center"
            android:background="@color/tint"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:textSize="12dp"
            android:textColor="@color/tint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="© Copyright 2023 | Mx Tunnel PRO - All Rights Reserved"
            android:textIsSelectable="true"/>
    </LinearLayout>
</LinearLayout>
